--- a/rigging/golang/templates/docker-compose.yml.tmpl
+++ b/rigging/golang/templates/docker-compose.yml.tmpl
@@ -3,7 +3,7 @@ services:
   web:
     build:
         context: .
-    image: {{ image_with_tag }}
+    image: {{ .ImageWithTag }}
     ports:
       - 8080
     restart: always
