Complete derrick up and fix docker build issue

--- a/rigging/golang/templates/Dockerfile.tmpl
+++ b/rigging/golang/templates/Dockerfile.tmpl
@@ -2,6 +2,7 @@
 FROM golang:{{ .Version }} AS build-env
 ADD . /src/{{ .ProjectFolder }}
 ENV GOPATH /:/src/{{ .ProjectFolder }}/vendor
+ENV CGO_ENABLED=0
 WORKDIR /src/{{ .ProjectFolder }}
 RUN go build -o app
 
