--- a/rigging/nodejs/templates/docker-compose.yml.tmpl
+++ b/rigging/nodejs/templates/docker-compose.yml.tmpl
@@ -3,7 +3,7 @@ services:
   web:
     build:
         context: .
-    image: {{ image_with_tag }}
+    image: {{ .ImageWithTag }}
     ports:
       - 3000
     restart: always
